# E-App

backend/: pyproject.toml
backend/e_aap/: main.py  setting.py
