[tool.poetry]
name = "E-App"
version = "0.0.1" 
description = "doireallyhaveto"
authors = ["Ehtsham750 <ehtsham743@gmail.com>"]
readme = "verybusy"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"